# snake-3d-cpp

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  gotchas.md  package-lock.json  package.json  webpack.config.js
.devcontainer/: Dockerfile  devcontainer.json
src/: game.cpp  game.hpp  main.cpp
src/actions/: control-actions.cpp  control-actions.hpp  cube-actions.cpp  cube-actions.hpp  game-actions.cpp  game-actions.hpp  snake-actions.cpp  snake-actions.hpp
src/drawers/: cube-side-drawer.cpp  cube-side-drawer.hpp  scene-drawer.cpp  scene-drawer.hpp
src/drawers/cube-drawer/: cube-drawer.cpp  cube-drawer.hpp
src/drawers/cube-drawer/geometry/: cube-side-coords-range.hpp  cube-texture-coords.hpp  cube-vertex-coords.hpp
src/helpers/: assert.cpp  assert.hpp  canvas.cpp  canvas.hpp  cube.cpp  cube.hpp  direction.hpp  drection.cpp  graphics-math.cpp  graphics-math.hpp  opengl.cpp  opengl.hpp  ranges.cpp  ranges.hpp  utils.cpp  utils.hpp
src/models/: Cube.hpp  CubePosition.cpp  CubePosition.hpp  CubeSide.hpp  ECameraMode.hpp  ECubeSide.hpp  EDirection.hpp  EGameStatus.hpp  GameState.hpp  Grid.hpp  ModelRotation.cpp  ModelRotation.hpp  Point2D.hpp  Point3D.hpp  Scene.hpp  Size.hpp  Snake.hpp  angles.hpp  ranges.hpp
static/: index.html
